# Grafana-Loki-Netwatch-monitoring-notification-by-Mumin

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: backfill_loki.py  gen_fonts_css.py  gen_interface_map.py  restart_netwatch.ps1  restart_netwatch.sh  test_notifications.py
src/: __init__.py  auth.py  config.py  logging_config.py  main.py  metrics.py  rate_limit.py
src/api/: __init__.py  routes.py  websocket.py
src/core/: __init__.py  classifier.py  correlator.py  (+4 more)
tests/: conftest.py  test_ack_cancels_escalation.py  test_api.py  test_api_coverage.py  test_api_hardening.py  test_app_core_security.py  test_as_cache_hardening.py  test_as_database.py  test_auth.py  test_bgp_resolution.py  test_classifier.py  test_config.py  test_correlator.py  test_correlator_incident_id.py  test_crud_incidents.py  test_database.py  test_db_indexes.py  test_dedup.py  test_dedup_window_math.py  test_device_map.py  test_digest.py  test_enricher.py  test_escalation_notifications.py  test_escalation_persistence.py  test_escalation_recovery_and_mute.py  test_incident_ack_restore.py  test_incident_timezone.py  test_incidents_dedup.py  test_interface_map.py  test_logging_config.py  test_main_lifespan.py  test_maintenance_suppression.py  test_maxpfx_alert_toggle.py  test_metrics.py  test_migrations_coverage.py  test_notification_tracking.py  test_notifications.py  test_notifications_delivery.py  test_notify_ack_suppression.py  test_notify_severity_threshold.py  (+17 more)
(+41 files in other folders)
